--- a/Prontuario do Paciente Online/Views/Shared/_LayoutLogin.cshtml
+++ b/Prontuario do Paciente Online/Views/Shared/_LayoutLogin.cshtml
@@ -5,9 +5,9 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/apple-icon.png">
-        <link rel="icon" type="image/png" href="/assets/img/favicon.png">
+        <link rel="icon" type="image/png" href="/assets/img/favicon.svg">
         <title>
-            Argon Dashboard 2 by Creative Tim
+            OnPront - Prontuário do Paciente On-line
         </title>
         <!--     Fonts and icons     -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
