--- a/Prontuario do Paciente Online/Views/Pacientes/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Pacientes/Index.cshtml
@@ -3,55 +3,60 @@
     ViewData["Title"] = "Pacientes Cadastrados";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
-<h2>@ViewData["Title"]</h2>
-<div class="card">
-    <div class="table-responsive">
-        @if (Model.Any())
-        {
-            <table class="table align-items-center mb-0">
-                <thead>
-                    <tr>
-                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nome</th>
-                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Idade</th>
-                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Motivo da Internacao</th>
-                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Ações</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td class="my-auto">
-                                <h3 class="mb-0 text-xs"> @item.Nome</h3>
-                            </td>
-                            <td class="my-auto">
-                                <h3 class="mb-0 text-xs"> @item.Idade</h3>
-                            </td>
-                            <td class="my-auto">
-                                <h3 class="mb-0 text-xs"> @item.MotivoInternacao</h3>
-                            </td>
-                            <td class="align-middle position-relative">
-                                <div class="dropdown position-static">
-                                    <button type="button" class="btn btn-secondary dropdown-toggle btn-sm" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Ações
-                                    </button>
-                                    <div class="dropdown-menu position-absolute" style="right: 0;">
-                                        <a class="dropdown-item details-button" asp-route-id="@item.Id" asp-controller="Pacientes" asp-action="Details">Detalhes</a>
-                                        <a class="dropdown-item" href="#">Editar</a>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        }
-        else
-        {
-            <p>Não existe dados para serem exibidos</p>
-        }
+
+<body>
+    <div class="main-content mt-4">
+        <div class="card p-4">
+            <div class="title-text m-4">
+                <h2>@ViewData["Title"]</h2>
+            </div>
+            <div class="table-responsive">
+                @if (Model.Any())
+                {
+                    <table class="table align-items-center mb-0">
+                        <thead>
+                            <tr>
+                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Id</th>
+                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Nome</th>
+                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Idade</th>
+                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Motivo da Internacao</th>
+                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Ações</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td class="my-auto">
+                                        <h3 class="mb-0 text-xs"> @item.Id</h3>
+                                    </td>
+                                    <td class="my-auto">
+                                        <h3 class="mb-0 text-xs"> @item.Nome</h3>
+                                    </td>
+                                    <td class="my-auto">
+                                        <h3 class="mb-0 text-xs"> @item.Idade</h3>
+                                    </td>
+                                    <td class="my-auto">
+                                        <h3 class="mb-0 text-xs"> @item.MotivoInternacao</h3>
+                                    </td>
+                                    <td>
+                                        <button type="button" class="btn btn-secondary btn-sm">Editar</button>
+                                        <button type="button" class="btn btn-default btn-sm">Detalhes</button>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                }
+                else
+                {
+                    <p>Não existe dados para serem exibidos</p>
+                }
+            </div>
+        </div>
     </div>
-</div>
+</body>
+
 
 
 
