--- a/Prontuario do Paciente Online/Views/Home/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Home/Index.cshtml
@@ -8,13 +8,14 @@
 <html lang="pt-br">
 
 <body>
-    <main class="main-content mt-4">
-        <div class="card">
+    <main class="main-content mt-4 d-flex">
+        <div class="card ">
             <div class="tittle-text m-4">
                 <h3>RESUMO DE PACIENTES</h3>
             </div>
 
-            <div class="table-responsive">
+            <div class="table-responsive w-100">
+                <div class="d-flex">
                 <table class="table align-items-center mb-0">
                     <thead>
                         <tr>
@@ -29,9 +30,6 @@
                         <tr>
                             <td>
                                 <div class="d-flex px-2 py-1">
-                                    <div>
-                                        <img src="/assets/img/joao-moura.jpg" class="avatar avatar-sm me-3">
-                                    </div>
                                     <div class="d-flex flex-column justify-content-center">
                                         <h6 class="mb-0 text-xs">João Moura</h6>
                                         <p class="text-xs text-secondary mb-0  mt-1">ALA: 09</p>
@@ -54,10 +52,7 @@
 
                         <tr>
                             <td>
-                                <div class="d-flex px-2 py-1">
-                                    <div>
-                                        <img src="/assets/img/larissa-reis.jpg" " class="avatar avatar-sm me-3">
-                                    </div>
+                                <div class="d-flex px-2 py-1">                              
                                     <div class="d-flex flex-column justify-content-center">
                                         <h6 class="mb-0 text-xs">Larissa Reis</h6>
                                         <p class="text-xs text-secondary mb-0  mt-1">ALA: 10</p>
@@ -81,9 +76,6 @@
                         <tr>
                             <td>
                                 <div class="d-flex px-2 py-1">
-                                    <div>
-                                        <img src="/assets/img/rogerio-araujo.jpg" class="avatar avatar-sm me-3">
-                                    </div>
                                     <div class="d-flex flex-column justify-content-center">
                                         <h6 class="mb-0 text-xs">Rogério Araujo</h6>
                                         <p class="text-xs text-secondary mb-0  mt-1">ALA: 08</p>
@@ -107,9 +99,6 @@
                         <tr>
                             <td>
                                 <div class="d-flex px-2 py-1">
-                                    <div>
-                                        <img src="/assets/img/isabela-santos.jpg" class="avatar avatar-sm me-3">
-                                    </div>
                                     <div class="d-flex flex-column justify-content-center">
                                         <h6 class="mb-0 text-xs">Isabela Santos Rodrigues</h6>
                                         <p class="text-xs text-secondary mb-0 mt-1">ALA: 09</p>
@@ -133,9 +122,6 @@
                         <tr>
                             <td>
                                 <div class="d-flex px-2 py-1">
-                                    <div>
-                                        <img src="/assets/img/guilherme-oliveira.jpg" class="avatar avatar-sm me-3">
-                                    </div>
                                     <div class="d-flex flex-column justify-content-center">
                                         <h6 class="mb-0 text-xs">Guilherme Oliveira Souza</h6>
                                         <p class="text-xs text-secondary mb-0  mt-1">ALA: 08</p>
@@ -159,9 +145,6 @@
                         <tr>
                             <td>
                                 <div class="d-flex px-2 py-1">
-                                    <div>
-                                        <img src="/assets/img/emilly-pereira.jpg" class="avatar avatar-sm me-3">
-                                    </div>
                                     <div class="d-flex flex-column justify-content-center">
                                         <h6 class="mb-0 text-xs">Emilly Pereira Dias</h6>
                                         <p class="text-xs text-secondary mb-0  mt-1">ALA: 10</p>
@@ -182,17 +165,20 @@
                             </td>
                         </tr>
                     </tbody>
-                </table>
-                <div class="d-flex justify-content-start">
-                    <div class="card p-3">
-                        <div class="card-body">
-                            <p>Quantidade Pacientes por Status</p>
-                            <div class="chart">
-                                <canvas id="pie-chart" class="chart-canvas" height="300"></canvas>
+                    </table>
+                    <div class="d-flex">
+                        <div class="card ">
+                            <div class="card-body">
+                                <p>Quantidade Pacientes por Status</p>
+                                <div class="chart">
+                                    <canvas id="pie-chart" class="chart-canvas" height="300"></canvas>
+                                </div>
                             </div>
                         </div>
                     </div>
+                
                 </div>
+                
             </div>
         </div>
     </main>
