--- a/Prontuario do Paciente Online/Views/Pacientes/Create.cshtml
+++ b/Prontuario do Paciente Online/Views/Pacientes/Create.cshtml
@@ -11,13 +11,13 @@
 </style>
 <html>
 <body>
-    <div class="main-content mt-4">
+    <div class="main-content mt-4 ">
         <div class="card p-4">
             <div class="tittle-text m-4">
                 <h3>@ViewData["Title"]</h3>
             </div>
             <div class="container-fluid">
-                <table class="table align-items-center mb0">
+                <table class="table align-items-center mb-0">
                     <form asp-action="Create" method="POST">
                         <div class="row">
                             <div class="col-md-6">
@@ -113,11 +113,11 @@
                             </div>
                         </div>
 
-                        <hr />
-                        <h4 class="p-4 color-background">Dados do Acompanhante</h4>
-                        <div class="container-fluid">
+                       @*<div class="container-fluid ">*@
                             <div class="row">
+                            <h4 class="color-background mt-5 mb-5">Dados do Acompanhante</h4>
                                 <div class="col-md-6">
+                                    
                                     <div class="form-group">
                                         <label class="form-control-label">Nome</label>
                                         <input asp-for="Acompanhante.NomeAcompanhante" class="form-control" placeholder="Digite o nome">
@@ -169,7 +169,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label class="form-control-label"> Cidade</label>
+                                        <label class="form-control-label">Cidade</label>
                                         <input asp-for="Acompanhante.CidadeAcompanhante" class="form-control" placeholder="Digite a cidade">
                                         <span asp-validation-for="Acompanhante.CidadeAcompanhante" class="text-danger"></span>
                                     </div>
@@ -178,30 +178,31 @@
                             <div class="row">
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <label class="form-control-label"> Endereço</label>
+                                        <label class="form-control-label">Endereço</label>
                                         <input asp-for="Acompanhante.EnderecoAcompanhante" class="form-control" placeholder="Digite o endereço">
                                         <span asp-validation-for="Acompanhante.EnderecoAcompanhante" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <label class="form-control-label"> Número</label>
+                                        <label class="form-control-label">Número</label>
                                         <input asp-for="Acompanhante.NumeroAcompanhante" class="form-control" placeholder="Digite o numero da residencia">
                                         <span asp-validation-for="Acompanhante.NumeroAcompanhante" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label class="form-control-label"> Grau de parentesco</label>
+                                        <label class="form-control-label">Grau de parentesco</label>
                                         <input asp-for="Acompanhante.GrauParentesco" class="form-control" placeholder="Digite o grau de parentesco">
                                         <span asp-validation-for="Acompanhante.GrauParentesco" class="text-danger"></span>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <h4 class="p-4 color-background">Dados de acesso do acompanhante</h4>
-                        <div class="container-fluid">
+                        @*</div>*@
+                        <h4 class="color-background mt-5 mb-5">Dados de acesso do acompanhante</h4>
+                        @*<div class="container-fluid">*@
                             <div class="col-md-3">
+                            
                                 <div class="form-group">
                                     <label class="form-control-label">E-mail</label>
                                     <input asp-for="CadastroAcesso.Email" class="form-control" placeholder="Digite o e-mail">
@@ -238,14 +239,16 @@
                                     </select>
                                 </div>
                             </div>
-                        </div>
-                        <div>
-                            <a href="@Url.Action("Index", "Home")" type="button" class="btn btn-secondary btn-sm">Cancelar</a>
-                            <button type="submit" class="btn btn-primary btn-sm">Salvar</button>
-                        </div>
+                        @*</div>*@
+
+                            <div class="d-flex justify-content-end">
+                                <div class="col-md-3">
+                                    <a href="@Url.Action("Index", "Home")" type="button" class="btn btn-secondary btn-sm">Cancelar</a>
+                                    <button type="submit" class="btn btn-primary btn-sm">Salvar</button>
+                                </div>
+                            </div>  
                     </form>
                 </table>
-            </div>
         </div>
     </div>
 </body>
