--- a/Prontuario do Paciente Online/Views/Home/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity;
-@model Prontuario_do_Paciente_Online.ViewModels.ProntuarioViewModel;
+@model IEnumerable<Prontuario_do_Paciente_Online.ViewModels.PacientesViewModelHome>;
 @inject UserManager<IdentityUser> UserManager
 @{
     ViewData["Title"] = "Index";
@@ -7,176 +7,84 @@
     var user = await UserManager.GetUserAsync(User);
 }
 
-<!DOCTYPE html>
-<html lang="pt-br">
 <link rel="stylesheet" type="text/css" href="~/css/site.css">
+<style>
 
+    .fixed-width-table {
+        width: 900px;
+    }
+
+    .bg-gradient-critico {
+        background: linear-gradient(to right, #FF5733, #D20000);
+    }
+
+    .bg-gradient-estavel {
+        background: linear-gradient(to right, #53d569, #33FF57);
+    }
+
+    .bg-gradient-grave {
+        background: linear-gradient(to right, #3373FF, #5733FF);
+    }
+
+</style>
 @if (!User.IsInRole("Acompanhante"))
 {
     <body>
-       <main class="main-content mt-4 d-flex">
-         <div class="row2">
-            <div class="card col-md-8 mr-20">
-                <div class="tittle-text m-4">
-                    <h3>RESUMO DE PACIENTES</h3>
-                </div>
+        <main class="main-content mt-4 d-flex">
+            <div class="row2">
+                <div class="card col-md-8 mr-20">
+                    <div class="tittle-text m-4">
+                        <h3>RESUMO DE PACIENTES</h3>
+                    </div>
+                    @if (Model.Any())
+                    {
+                        <div class="table w-100 mb-4 ">
+                            <div class="d-flex">
+                                <table class="table fixed-width-table align-items-center mb-0">
+                                    <thead>
+                                        <tr>
+                                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nome</th>
+                                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Diagnostico</th>
+                                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Ultima Atualização</th>
+                                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Status</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @foreach (var item in Model)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    <div class="d-flex px-2 py-1">
+                                                        <div class="d-flex flex-column justify-content-center">
+                                                            <h6 class="mb-0 text-xs">@item.Paciente.Nome</h6>
+                                                            <p class="text-xs text-secondary mb-0  mt-1">@item.Prontuario.Quarto</p>
+                                                        </div>
+                                                    </div>
+                                                </td>
 
-                <div class="table-responsive w-100 mb-4 ">
-                    <div class="d-flex">
-                        <table class="table align-items-center mb-0">
-                            <thead>
-                                <tr>
-                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nome</th>
-                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Diagnostico</th>
-                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Cid</th>
-                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Data internação</th>
-                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Status</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <div class="d-flex px-2 py-1">
-                                            <div class="d-flex flex-column justify-content-center">
-                                                <h6 class="mb-0 text-xs">João Moura</h6>
-                                                <p class="text-xs text-secondary mb-0  mt-1">ALA: 09</p>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <p class="text-xs font-weight-bold mb-0">Suspeita de infarto do miocárdio</p>
-                                    </td>
-                                    <td class="align-middle text-center">
-                                        <p class="text-xs font-weight-bold mb-0"> Z03.4</p>
-                                    </td>
-                                    <td class="align-middle text-center">
-                                        <span class="text-secondary text-xs font-weight-bold">14/08/2023</span>
-                                    </td>
-                                    <td class="align-middle text-center text-sm">
-                                        <span class="badge badge-pill bg-gradient-warning">Estável</span>
-                                    </td>
-                                </tr>
+                                                <td>
+                                                    <p class="text-xs font-weight-bold mb-0">@item.Prontuario.Diagnostico</p>
+                                                </td>
 
-                                <tr>
-                                    <td>
-                                        <div class="d-flex px-2 py-1">
-                                            <div class="d-flex flex-column justify-content-center">
-                                                <h6 class="mb-0 text-xs">Larissa Reis</h6>
-                                                <p class="text-xs text-secondary mb-0  mt-1">ALA: 10</p>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <p class="text-xs font-weight-bold mb-0">Neoplasia maligna</p>
-                                    </td>
-                                    <td class="align-middle text-center text-sm">
-                                        <p class="text-xs font-weight-bold mb-0">Z03.1</p>
-                                    </td>
-                                    <td class="align-middle text-center">
-                                        <span class="text-secondary text-xs font-weight-bold">16/08/2023</span>
-                                    </td>
-                                    <td class="align-middle text-center text-sm">
-                                        <span class="badge badge-pill bg-gradient-danger">Grave</span>
-                                    </td>
-                                </tr>
+                                                <td class="align-middle text-center">
+                                                    <span class="text-secondary text-xs font-weight-bold">@item.Prontuario.DataProntuario</span>
+                                                </td>
 
-                                <tr>
-                                    <td>
-                                        <div class="d-flex px-2 py-1">
-                                            <div class="d-flex flex-column justify-content-center">
-                                                <h6 class="mb-0 text-xs">Rogério Araujo</h6>
-                                                <p class="text-xs text-secondary mb-0  mt-1">ALA: 08</p>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <p class="text-xs font-weight-bold mb-0">Doença ou afecção não especificada</p>
-                                    </td>
-                                    <td class="align-middle text-center text-sm">
-                                        <p class="text-xs font-weight-bold mb-0">Z03.9</p>
-                                    </td>
-                                    <td class="align-middle text-center">
-                                        <span class="text-secondary text-xs font-weight-bold">19/08/2023</span>
-                                    </td>
-                                    <td class="align-middle text-center text-sm">
-                                        <span class="badge badge-pill bg-gradient-warning">Estável</span>
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td>
-                                        <div class="d-flex px-2 py-1">
-                                            <div class="d-flex flex-column justify-content-center">
-                                                <h6 class="mb-0 text-xs">Isabela Santos Rodrigues</h6>
-                                                <p class="text-xs text-secondary mb-0 mt-1">ALA: 09</p>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <p class="text-xs font-weight-bold mb-0">Suspeita de tuberculose</p>
-                                    </td>
-                                    <td class="align-middle text-center text-sm">
-                                        <p class="text-xs font-weight-bold mb-0">Z03.0</p>
-                                    </td>
-                                    <td class="align-middle text-center">
-                                        <span class="text-secondary text-xs font-weight-bold">20/08/2023</span>
-                                    </td>
-                                    <td class="align-middle text-center text-sm">
-                                        <span class="badge badge-pill bg-gradient-danger">Grave</span>
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td>
-                                        <div class="d-flex px-2 py-1">
-                                            <div class="d-flex flex-column justify-content-center">
-                                                <h6 class="mb-0 text-xs">Guilherme Oliveira Souza</h6>
-                                                <p class="text-xs text-secondary mb-0  mt-1">ALA: 08</p>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <p class="text-xs font-weight-bold mb-0">Transtornos mentais e do comportamento</p>
-                                    </td>
-                                    <td class="align-middle text-center text-sm">
-                                        <p class="text-xs font-weight-bold mb-0">Z03.2</p>
-                                    </td>
-                                    <td class="align-middle text-center">
-                                        <span class="text-secondary text-xs font-weight-bold">21/08/2023</span>
-                                    </td>
-                                    <td class="align-middle text-center text-sm">
-                                        <span class="badge badge-pill bg-gradient-danger">Grave</span>
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td>
-                                        <div class="d-flex px-2 py-1">
-                                            <div class="d-flex flex-column justify-content-center">
-                                                <h6 class="mb-0 text-xs">Emilly Pereira Dias</h6>
-                                                <p class="text-xs text-secondary mb-0  mt-1">ALA: 10</p>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <p class="text-xs font-weight-bold mb-0">Suspeita de efeito tóxico de substância ingerida</p>
-                                    </td>
-                                    <td class="align-middle text-center text-sm">
-                                        <p class="text-xs font-weight-bold mb-0">Z03.6</p>
-                                    </td>
-                                    <td class="align-middle text-center">
-                                        <span class="text-secondary text-xs font-weight-bold">23/08/2023</span>
-                                    </td>
-                                    <td class="align-middle text-center text-sm">
-                                        <span class="badge badge-pill bg-gradient-warning">Estável</span>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                                                <td class="align-middle text-center text-sm">
+                                                    <span class="badge badge-pill status" id="statusBadge">@item.Prontuario.EnumStatus</span>
+                                                </td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
-                     </div>
-            </div>
-
+                    }
+                    else
+                    {
+                        <p>Não existem dados para serem exibidos</p>
+                    }
+                </div>
                 <div class="card col-md-4 p-5 w-26 d-flex">
                     <div class="card-body">
                         <p>Quantidade Pacientes por Status</p>
@@ -185,10 +93,7 @@
                         </div>
                     </div>
                 </div>
-
-         </div>      
-       
-     </main>
+        </main>
     </body>
 }
 else
@@ -257,6 +162,34 @@ else
             },
         },
     });
+
 </script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        var statusElements = document.querySelectorAll(".status");
+
+        statusElements.forEach(function (statusElement) {
+            var status = statusElement.innerHTML.trim();
+
+            switch (status) {
+                case "Critico":
+                    statusElement.classList.add("bg-gradient-critico");
+                    break;
+                case "Estavel":
+                    statusElement.classList.add("bg-gradient-estavel");
+                    break;
+                case "Grave":
+                    statusElement.classList.add("bg-gradient-grave");
+                    break;
+                default:
+                    // Handle other status values if needed
+                    break;
+            }
+        });
+    });
+</script>
+
+
 
 
